<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.smallrye</groupId>
        <artifactId>smallrye-parent</artifactId>
        <version>23</version>
    </parent>

    <artifactId>smallrye-async-api-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>SmallRye: AsyncAPI</name>
    <url>http://smallrye.io</url>

    <properties>
        <version.smallrye-common>1.3.0</version.smallrye-common>
    </properties>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/smallrye/smallrye-async-api/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:git@github.com:smallrye/smallrye-async-api.git</connection>
        <developerConnection>scm:git:git@github.com:smallrye/smallrye-async-api.git</developerConnection>
        <url>https://github.com/smallrye/smallrye-async-api/</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>api</module>
        <module>implementation</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            
            
            <!-- Dependencies provided by the project -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-async-api-api</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <profiles>
        <profile>
            <id>jdk11plus</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <properties>
                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
                <maven.compiler.release>8</maven.compiler.release>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.2.0</version>
                        <configuration>
                            <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
                            <docletArtifact>
                                <groupId>nl.talsmasoftware</groupId>
                                <artifactId>umldoclet</artifactId>
                                <version>2.0.12</version>
                            </docletArtifact>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
